--- a/registry.system/index.html
+++ b/registry.system/index.html
@@ -59,69 +59,81 @@
             <h2 class="people-ttl">Website Developers</h2>
             <div class="card-container">
                 <div class="card card1">
-                    <img src="/registry.system/images/cholo-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/cholo-card.png" alt="Van Cholo Esguerra">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://chocoacocoa.github.io/Van-Cholo---Profile/" target="_blank"><i class="ri-pages-line"></i></a>
+                        <a href="https://www.facebook.com/vancholo.esguerra.5/" target="_blank"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://github.com/chocoacocoa" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://www.youtube.com/@choco6002" target="_blank"><i class="ri-youtube-line"></i></a>
+                        <a href="https://www.instagram.com/vancholo_/" target="_blank"><i class="ri-instagram-line"></i></a>
                     </div>
                 </div>
                 <div class="card card2">
-                    <img src="/registry.system/images/cudia-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/cudia-card.png" alt="Lucky Vincent Cudia">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.facebook.com/luckyvincent.cudia?mibextid=ZbWKwL" target="_blank"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://github.com/Cudia0" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://youtube.com/@luckyvincentcudia9764" target="_blank"><i class="ri-youtube-line"></i></a>
                     </div>
                 </div>
                 <div class="card card3">
-                    <img src="/registry.system/images/ken-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/ken-card.png" alt="Julius Peralta">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="#" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card4">
-                    <img src="/registry.system/images/rogon-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/rogon-card.png" alt="Leonel Rogon">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
-                        <a href="#"><i class="ri-github-fill"></i></a>
-                        <a href="#"><i class="ri-linkedin-fill"></i></a>
-                        <a href="#"><i class="ri-instagram-line""></i></a>
+                        <a href="https://rogondotdev.github.io/personal-portfolio/" target="_blank"><i class="ri-pages-line"></i></a>
+                        <a href="https://www.facebook.com/rogon.dev" target="_blank"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://github.com/rogondotdev" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://www.linkedin.com/in/leonel-rogon-9616a7332/" target="_blank"><i class="ri-linkedin-fill"></i></a>
+                        <a href="https://www.instagram.com/rogondotdev/" target="_blank"><i class="ri-instagram-line"></i></a>
                     </div>
                 </div>
                 <div class="card card5">
                     <img src="/registry.system/images/ken-card.png" alt="Kenneth Apolong">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="#" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
             </div>
 
             <div class="card-container">
                 <div class="card card1">
-                    <img src="/registry.system/images/toledo-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/toledo-card.png" alt="Hillary Mhyles Toledo">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.facebook.com/share/6s5ZNDhg7dAgBaFA/?mibextid=LQQJ4d" target="_blank"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.instagram.com/colorshin77?igsh=Y3d0dXJ3NWQ4eHdm&utm_source=qr" target="_blank"><i class="ri-instagram-line"></i></a>
+                        <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fgithub.com%2FButterHoney-mhyles890%3Ffbclid%3DIwZXh0bgNhZW0CMTEAAR0LG2GU1KVdao7r_zO5QtDGX6dCIjl4H8TfhPERIsXVLY60xQByUGvHiAc_aem_5XnEy5oKPOZgzw2LvGxI6Q&h=AT13Sy0dVPHXLFDHLsSwdfaE8InLUZ52SaoK_wz-j6W0-Fd568AfLG44lgdpbA8IwMNje2k4gYakmwebUT9wkm0rp1jwQN-5qNYhbyHm4sNbXW29o5GAXzpXezFXtrGKCWrZd_R-8WNqXA0&s=1" target="_blank"><i class="ri-github-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card2">
-                    <img src="/registry.system/images/elaiza-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/elaiza-card.png" alt="Elaize Rosario">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.facebook.com/elaizajane.rosario" target="_blank"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://github.com/ElaizaJanee" target="_blank"><i class="ri-github-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card3">
                     <img src="/registry.system/images/ken-card.png" alt="Kenneth Apolong">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="#" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card4">
-                    <img src="/registry.system/images/eloisa-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/eloisa-card.png" alt="Eloisa Rosario">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.facebook.com/eloisajean.rosario.54" target="_blank"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://github.com/LilJeanie" target="_blank"><i class="ri-github-fill"></i></a>
+                        <a href="https://www.instagram.com/eloisajean.14" target="_blank"><i class="ri-instagram-line"></i></a>
                     </div>
                 </div>
                 <div class="card card5">
-                    <img src="/registry.system/images/erin-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/erin-card.png" alt="Erin Alonzo">
                     <div class="links">
-                        <a href="#"><i class="ri-facebook-fill"></i></a>
+                        <a href="https://www.facebook.com/share/1DXsqNLEfu/?mibextid=qi2Omg" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
             </div>
@@ -155,7 +167,7 @@
                                 <p>&nbsp;&nbsp;&nbsp;Frontend Web Developer</p>
                             </div>
                             <div class="dev dev-five">
-                                <h3>Mhyles Toledo</h3>
+                                <h3>Hillary Mhyles Toledo</h3>
                                 <p>&nbsp;&nbsp;&nbsp;UI/UX & Graphic Designer</p>
                             </div>
                             <div class="dev dev-six">
