--- a/registry.system/index.html
+++ b/registry.system/index.html
@@ -27,7 +27,7 @@
         </nav>
         <div class="registration">
             <a href="" class="sign-up">Sign up</a>
-            <button class="btn-yellow">Log In</button>
+            <button class="btn-yellow" id="">Log In</button>
         </div>
     </header>
     <main>
@@ -38,7 +38,7 @@
                     <h2>Registry System</h2>
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione doloribus <br> illo, vel repellendus quas laudantium quisquam perspiciatis <br> culpa ex sed ipsum ab illum ipsam optio hic ad est iusto cum.</p>
-                <button class="btn-yellow learn">Learn more</button>
+                <button class="btn-yellow learn" id="goAbout">Learn more</button>
             </div>
             <div class="hero-img">
             </div>
@@ -60,7 +60,7 @@
             <div class="card-container">
                 <div class="card card1">
                     <img src="/registry.system/images/cholo-card.png" alt="Van Cholo Esguerra">
-                    <div class="links">
+                    <div class="links5">
                         <a href="https://chocoacocoa.github.io/Van-Cholo---Profile/" target="_blank"><i class="ri-pages-line"></i></a>
                         <a href="https://www.facebook.com/vancholo.esguerra.5/" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/chocoacocoa" target="_blank"><i class="ri-github-fill"></i></a>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="card card2">
                     <img src="/registry.system/images/cudia-card.png" alt="Lucky Vincent Cudia">
-                    <div class="links">
+                    <div class="links3">
                         <a href="https://www.facebook.com/luckyvincent.cudia?mibextid=ZbWKwL" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/Cudia0" target="_blank"><i class="ri-github-fill"></i></a>
                         <a href="https://youtube.com/@luckyvincentcudia9764" target="_blank"><i class="ri-youtube-line"></i></a>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="card card4">
                     <img src="/registry.system/images/rogon-card.png" alt="Leonel Rogon">
-                    <div class="links">
+                    <div class="links5">
                         <a href="https://rogondotdev.github.io/personal-portfolio/" target="_blank"><i class="ri-pages-line"></i></a>
                         <a href="https://www.facebook.com/rogon.dev" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/rogondotdev" target="_blank"><i class="ri-github-fill"></i></a>
@@ -103,7 +103,7 @@
             <div class="card-container">
                 <div class="card card1">
                     <img src="/registry.system/images/toledo-card.png" alt="Hillary Mhyles Toledo">
-                    <div class="links">
+                    <div class="links3">
                         <a href="https://www.facebook.com/share/6s5ZNDhg7dAgBaFA/?mibextid=LQQJ4d" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://www.instagram.com/colorshin77?igsh=Y3d0dXJ3NWQ4eHdm&utm_source=qr" target="_blank"><i class="ri-instagram-line"></i></a>
                         <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fgithub.com%2FButterHoney-mhyles890%3Ffbclid%3DIwZXh0bgNhZW0CMTEAAR0LG2GU1KVdao7r_zO5QtDGX6dCIjl4H8TfhPERIsXVLY60xQByUGvHiAc_aem_5XnEy5oKPOZgzw2LvGxI6Q&h=AT13Sy0dVPHXLFDHLsSwdfaE8InLUZ52SaoK_wz-j6W0-Fd568AfLG44lgdpbA8IwMNje2k4gYakmwebUT9wkm0rp1jwQN-5qNYhbyHm4sNbXW29o5GAXzpXezFXtrGKCWrZd_R-8WNqXA0&s=1" target="_blank"><i class="ri-github-fill"></i></a>
@@ -111,20 +111,20 @@
                 </div>
                 <div class="card card2">
                     <img src="/registry.system/images/elaiza-card.png" alt="Elaize Rosario">
-                    <div class="links">
+                    <div class="links2">
                         <a href="https://www.facebook.com/elaizajane.rosario" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/ElaizaJanee" target="_blank"><i class="ri-github-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card3">
-                    <img src="/registry.system/images/ken-card.png" alt="Kenneth Apolong">
+                    <img src="/registry.system/images/jundy-card.png" alt="Sir Jundy Dimasu-ay">
                     <div class="links">
                         <a href="#" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card4">
                     <img src="/registry.system/images/eloisa-card.png" alt="Eloisa Rosario">
-                    <div class="links">
+                    <div class="links3">
                         <a href="https://www.facebook.com/eloisajean.rosario.54" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/LilJeanie" target="_blank"><i class="ri-github-fill"></i></a>
                         <a href="https://www.instagram.com/eloisajean.14" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -199,5 +199,10 @@
         </div>
         &copy; 2024 All Rights Reserved <br> Balingasa High School 12-ICT OCTAV8
     </footer>
+    <script>
+        document.getElementById("goAbout").addEventListener("click", function() {
+    window.location.href = "#about";
+  });
+    </script>
 </body>
 </html>
