--- a/REGISTRY.SYSTEM/index.html
+++ b/REGISTRY.SYSTEM/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BHS Registry System</title>
-    <link rel="stylesheet" href="/registry.system/style.css">
+    <link rel="stylesheet" href="/REGISTRY.SYSTEM/style.css">
     <link rel="icon" href="/registry.system/images/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
