--- a/registry.system/index.html
+++ b/registry.system/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BHS Registry System</title>
-    <link rel="stylesheet" href="/registry.system/style.css">
-    <link rel="icon" href="/registry.system/images/logo.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
 </head>
 <body>
     <header>
         <a href="">
-            <img src="/registry.system/images/logo.png" alt="BHS REGISTRY SYSTEM LOGO">
+            <img src="images/logo.png" alt="BHS REGISTRY SYSTEM LOGO">
         </a>
         <nav>
             <ul class="sidebar">
@@ -80,7 +80,7 @@
             <h2 class="people-ttl">Website Developers</h2>
             <div class="card-container">
                 <div class="card card1">
-                    <img src="/registry.system/images/cholo-card.png" alt="Van Cholo Esguerra">
+                    <img src="images/cholo-card.png" alt="Van Cholo Esguerra">
                     <div class="links5">
                         <a href="https://chocoacocoa.github.io/Van-Cholo---Profile/" target="_blank"><i class="ri-pages-line"></i></a>
                         <a href="https://www.facebook.com/vancholo.esguerra.5/" target="_blank"><i class="ri-facebook-fill"></i></a>
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="card card2">
-                    <img src="/registry.system/images/cudia-card.png" alt="Lucky Vincent Cudia">
+                    <img src="images/cudia-card.png" alt="Lucky Vincent Cudia">
                     <div class="links3">
                         <a href="https://www.facebook.com/luckyvincent.cudia?mibextid=ZbWKwL" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/Cudia0" target="_blank"><i class="ri-github-fill"></i></a>
@@ -98,13 +98,13 @@
                     </div>
                 </div>
                 <div class="card card3">
-                    <img src="/registry.system/images/julius-card.png" alt="Julius Peralta">
+                    <img src="images/julius-card.png" alt="Julius Peralta">
                     <div class="links">
                         <a href="https://www.facebook.com/juliusper" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card4">
-                    <img src="/registry.system/images/rogon-card.png" alt="Leonel Rogon">
+                    <img src="images/rogon-card.png" alt="Leonel Rogon">
                     <div class="links5">
                         <a href="https://rogondotdev.github.io/personal-portfolio/" target="_blank"><i class="ri-pages-line"></i></a>
                         <a href="https://www.facebook.com/rogon.dev" target="_blank"><i class="ri-facebook-fill"></i></a>
@@ -114,14 +114,14 @@
                     </div>
                 </div>
                 <div class="card card5">
-                    <img src="/registry.system/images/ken-card.png" alt="Kenneth Apolong">
+                    <img src="images/ken-card.png" alt="Kenneth Apolong">
                     <div class="links">
                         <a href="https://www.facebook.com/ken.dqox" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
 
                 <div class="card card6">
-                    <img src="/registry.system/images/toledo-card.png" alt="Hillary Mhyles Toledo">
+                    <img src="images/toledo-card.png" alt="Hillary Mhyles Toledo">
                     <div class="links3">
                         <a href="https://www.facebook.com/share/6s5ZNDhg7dAgBaFA/?mibextid=LQQJ4d" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://www.instagram.com/colorshin77?igsh=Y3d0dXJ3NWQ4eHdm&utm_source=qr" target="_blank"><i class="ri-instagram-line"></i></a>
@@ -129,20 +129,20 @@
                     </div>
                 </div>
                 <div class="card card7">
-                    <img src="/registry.system/images/elaiza-card.png" alt="Elaize Rosario">
+                    <img src="images/elaiza-card.png" alt="Elaize Rosario">
                     <div class="links2">
                         <a href="https://www.facebook.com/elaizajane.rosario" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/ElaizaJanee" target="_blank"><i class="ri-github-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card8">
-                    <img src="/registry.system/images/jundy-card.png" alt="Sir Jundy Dimasu-ay">
+                    <img src="images/jundy-card.png" alt="Sir Jundy Dimasu-ay">
                     <div class="links">
                         <a href="https://www.facebook.com/dimasuayjundy" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
                 </div>
                 <div class="card card9">
-                    <img src="/registry.system/images/eloisa-card.png" alt="Eloisa Rosario">
+                    <img src="images/eloisa-card.png" alt="Eloisa Rosario">
                     <div class="links3">
                         <a href="https://www.facebook.com/eloisajean.rosario.54" target="_blank"><i class="ri-facebook-fill"></i></a>
                         <a href="https://github.com/LilJeanie" target="_blank"><i class="ri-github-fill"></i></a>
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="card card10">
-                    <img src="/registry.system/images/erin-card.png" alt="Erin Alonzo">
+                    <img src="images/erin-card.png" alt="Erin Alonzo">
                     <div class="links">
                         <a href="https://www.facebook.com/share/1DXsqNLEfu/?mibextid=qi2Omg" target="_blank"><i class="ri-facebook-fill"></i></a>
                     </div>
@@ -162,8 +162,8 @@
     <footer>
         <div class="footer-container">
             <div class="logo-foot">
-                <img src="/registry.system/images/logo.png" alt="Balingasa Higb School Registry System">
-                <img src="/registry.system/images/bafe-logo.png" alt="Bureau of Agriculture and Fisheries Engineering">
+                <img src="images/logo.png" alt="Balingasa Higb School Registry System">
+                <img src="images/bafe-logo.png" alt="Bureau of Agriculture and Fisheries Engineering">
             </div>
             <div class="links-foot">
                 <h2>WEBSITE DEVELOPERS | SPECIAL MENTIONS</h2>
